[package]
name = "bitflags-derive"
version = "0.0.2"
authors = ["bitflags contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bitflags/bitflags-derive"
description = "bitflags-aware #[derive] macros."
keywords = ["bit", "bitmask", "bitflags", "flags"]
categories = ["no-std"]
edition = "2024"
exclude = ["/tests", "/.github"]

[dependencies.bitflags-derive-macros]
path = "macros"
version = "0.0.2"

[dependencies.bitflags]
version = "2"

# Adding new library support to `bitflags-derive`:
#
# 1. Add an optional dependency here
# 2. Add support in a module in `macros`
# 3. Add some tests in `tests/ui`

[workspace]
members = [
    "macros",
    "tests/ui",
]
