[package]
name = "bitflags-derive-macros"
version = "0.0.3"
authors = ["bitflags contributors"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bitflags/bitflags-derive"
description = "bitflags-aware #[derive] macros."
keywords = ["bit", "bitmask", "bitflags", "flags"]
categories = ["no-std"]
edition = "2021"

[lib]
proc-macro = true

[features]
serde = []

[dependencies.proc-macro2]
version = "1"

[dependencies.quote]
version = "1"

[dependencies.syn]
version = "2"
features = ["full"]
