[package]
name = "bitflags-derive-tests-ui"
version = "0.0.0"
edition = "2021"
publish = false

[features]
serde = ["bitflags-derive/serde", "dep:serde_test"]

[dependencies.bitflags-derive]
path = "../../"

[dependencies.bitflags]
version = "2"

[dependencies.serde_test]
version = "1"
optional = true

[dependencies.trybuild]
version = "1"
